<resources>
    <string name="app_name">Kotlin1</string>
    <string name="customize_dashboard">Customize Dashboard</string>
    <string name="background_image">Background Image</string>
    <string name="logo">LOGO</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_the_team_in_your_city_and_dominate_the_league">Find the team in your city and dominate the league.</string>
    <string name="get_started">Get Started</string>
</resources>
